[workspace]
members = ["russh", "russh-config", "cryptovec", "pageant", "russh-util"]
resolver = "2"

[workspace.dependencies]
aes = "0.9"
async-trait = "0.1.50"
base16ct = "1"
byteorder = "1.4"
bytes = "1.7"
digest = "0.11.0-rc.5"
delegate = "0.13"
env_logger = "0.11"
futures = "0.3"
hmac = "0.13"
log = "0.4.11"
rand = { version = "0.10", features = ["thread_rng"] }
sha1 = { version = "0.11", features = ["oid"] }
sha2 = { version = "0.11", features = ["oid"] }
signature = "3.0.0-rc.10"
ssh-encoding = { version = "=0.3.0-rc.9", features = ["bytes"] }
ssh-key = { version = "=0.7.0-rc.10", features = [
    "ed25519",
    "p256",
    "p384",
    "p521",
    "encryption",
    "ppk",
] }
thiserror = "2.0.18"
tokio = { version = "1.17.0" }
tokio-stream = { version = "0.1.3", features = ["net", "sync"] }
