[package]
authors = ["Pierre-Étienne Meunier <pe@pijul.org>", "Eugeny <e@ajenti.org"]
description = "A vector which zeroes its memory on clears and reallocations."
documentation = "https://docs.rs/russh-cryptovec"
edition = "2024"
license = "Apache-2.0"
name = "russh-cryptovec"
repository = "https://github.com/warp-tech/russh"
version = "0.52.0"
rust-version = "1.85"

[dependencies]
ssh-encoding = { workspace = true, optional = true }
log.workspace = true

[target.'cfg(unix)'.dependencies]
nix.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
winapi.workspace = true
libc.workspace = true

[dev-dependencies]
wasm-bindgen-test.workspace = true

[features]
ssh-encoding = ["dep:ssh-encoding"]
