[package]
authors = ["Pierre-Étienne Meunier <pe@pijul.org>", "Eugeny <e@ajenti.org"]
description = "A vector which zeroes its memory on clears and reallocations."
documentation = "https://docs.rs/russh-cryptovec"
edition = "2024"
license = "Apache-2.0"
name = "russh-cryptovec"
repository = "https://github.com/warp-tech/russh"
version = "0.59.0"
rust-version = "1.85"

[dependencies]
ssh-encoding = { workspace = true, optional = true }
log.workspace = true

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["mman"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_System_Memory",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_Foundation",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3.46"

[features]
ssh-encoding = ["dep:ssh-encoding"]
