[package]
authors = ["Eugene <inbox@null.page>"]
description = "Pageant SSH agent transport client."
documentation = "https://docs.rs/pageant"
edition = "2021"
license = "Apache-2.0"
name = "pageant"
repository = "https://github.com/warp-tech/russh"
version = "0.0.3"
rust-version = "1.75"

[dependencies]
futures.workspace = true
thiserror.workspace = true
rand.workspace = true
log.workspace = true
tokio = { workspace = true }
bytes.workspace = true
delegate.workspace = true
sha2 = { workspace = true, optional = true }

[features]
default = ["wmmessage"]

wmmessage = [
    "tokio/rt",
    "tokio/io-util",
    "windows/Win32_UI_WindowsAndMessaging",
    "windows/Win32_System_Memory",
    "windows/Win32_System_Threading",
    "windows/Win32_System_DataExchange",
]

# Since PuTTY 0.75 Pageant switched to a more robust named pipes bases communication
namedpipes = [
    "tokio/net",
    "tokio/time",
    "dep:sha2",
    "dep:windows-strings",
    "windows/Win32_Security_Authentication_Identity",
    "windows/Win32_Security_Cryptography",
]

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59", features = ["Win32_Security"] }
windows-strings = { version = "0.3", optional = true }
