[package]
authors = ["Pierre-Étienne Meunier <pe@pijul.org>"]
description = "Deal with SSH keys: load them, decrypt them, call an SSH agent."
documentation = "https://docs.rs/russh-keys"
edition = "2021"
homepage = "https://github.com/warp-tech/russh"
keywords = ["ssh"]
license = "Apache-2.0"
name = "russh-keys"
repository = "https://github.com/warp-tech/russh"
version = "0.50.0-beta.7"
rust-version = "1.65"

[dependencies]

[features]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = [
  "io-util",
  "rt-multi-thread",
  "time",
  "net",
] }
tokio-stream.workspace = true
home.workspace = true

[target.'cfg(windows)'.dependencies]
pageant = { version = "0.0.2", path = "../pageant" }

[dev-dependencies]
env_logger.workspace = true
tempfile = "3.14.0"
tokio = { workspace = true, features = ["test-util", "macros", "process"] }
