[package]
name = "russh-util"
version = "0.46.0"
edition = "2021"
rust-version = "1.65"
description = "Runtime abstraction utilities for russh."
documentation = "https://docs.rs/russh-util"
homepage = "https://github.com/warp-tech/russh"
license = "Apache-2.0"
repository = "https://github.com/warp-tech/russh"

[dependencies]
chrono = "0.4.38"
tokio = { version = "1.17", features = ["sync", "macros"] }

[dev-dependencies]
futures-executor = "0.3.13"
static_assertions = "1.1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.43"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.17", features = ["io-util", "rt-multi-thread", "rt"] }
