[package]
name = "russh-util"
version = "0.52.0"
edition = "2021"
rust-version = "1.75"
description = "Runtime abstraction utilities for russh."
documentation = "https://docs.rs/russh-util"
homepage = "https://github.com/warp-tech/russh"
license = "Apache-2.0"
repository = "https://github.com/warp-tech/russh"

[dependencies]
tokio = { workspace = true, features = ["sync", "macros"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
chrono = "0.4.38"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.43"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["io-util", "rt-multi-thread", "rt"] }
