[package]
name = "russh-util"
version = "0.52.0"
edition = "2024"
rust-version = "1.85"
description = "Runtime abstraction utilities for russh."
documentation = "https://docs.rs/russh-util"
homepage = "https://github.com/warp-tech/russh"
license = "Apache-2.0"
repository = "https://github.com/warp-tech/russh"

[dependencies]
tokio = { workspace = true, features = ["sync", "macros"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
chrono.workspace = true
wasm-bindgen-futures.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["io-util", "rt-multi-thread", "rt"] }
