[package]
authors = ["Pierre-Étienne Meunier <pe@pijul.org>"]
description = "A client and server SSH library."
documentation = "https://docs.rs/russh"
edition = "2024"
homepage = "https://github.com/warp-tech/russh"
keywords = ["ssh"]
license = "Apache-2.0"
name = "russh"
readme = "../README.md"
repository = "https://github.com/warp-tech/russh"
version = "0.57.0"
rust-version = "1.85"

[features]
default = ["flate2", "aws-lc-rs", "rsa"]
# Crypto backends: enable at least one of `aws-lc-rs` or `ring`.
aws-lc-rs = ["dep:aws-lc-rs"] # Default crypto backend.
async-trait = ["dep:async-trait"]
legacy-ed25519-pkcs8-parser = ["yasna"]
# Danger: 3DES cipher is insecure.
des = ["dep:des"]
# Danger: DSA algorithm is insecure.
dsa = ["ssh-key/dsa"]
ring = ["dep:ring"] # Alternative crypto backend.
rsa = ["dep:rsa", "dep:pkcs1", "ssh-key/rsa", "ssh-key/sha1"]
_bench = ["dep:criterion"]

[dependencies]
# Workspace Members
russh-cryptovec = { workspace = true, features = ["ssh-encoding"] }
russh-util.workspace = true

# Async & Runtime
async-trait = { workspace = true, optional = true }
futures.workspace = true
tokio = { workspace = true, features = ["io-util", "sync", "time"] }

# Cryptography & SSH
aes.workspace = true
aws-lc-rs = { workspace = true, optional = true }
block-padding.workspace = true
cbc.workspace = true
ctr.workspace = true
curve25519-dalek.workspace = true
der.workspace = true
des = { workspace = true, optional = true }
digest.workspace = true
ed25519-dalek.workspace = true
elliptic-curve.workspace = true
hybrid-array.workspace = true
hmac.workspace = true
libcrux-ml-kem.workspace = true
md5.workspace = true
num-bigint.workspace = true
p256.workspace = true
p384.workspace = true
p521.workspace = true
pbkdf2.workspace = true
pkcs1 = { workspace = true, optional = true }
pkcs5.workspace = true
pkcs8.workspace = true
ring = { workspace = true, optional = true }
rsa = { workspace = true, optional = true }
sec1.workspace = true
sha1.workspace = true
sha2.workspace = true
signature.workspace = true
spki.workspace = true
ssh-encoding.workspace = true
ssh-key = { workspace = true, optional = true }
subtle.workspace = true
yasna = { workspace = true, optional = true }

# System & OS
getrandom.workspace = true

# Encoding & Serialization
byteorder.workspace = true
bytes.workspace = true
data-encoding.workspace = true
flate2 = { workspace = true, optional = true }
hex-literal.workspace = true

# Logging & Error Handling
log.workspace = true
thiserror.workspace = true

# Utilities
delegate.workspace = true
enum_dispatch.workspace = true
rand.workspace = true

# Testing & Benchmarking
criterion = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = [
    "io-util",
    "rt-multi-thread",
    "time",
    "net",
] }
home.workspace = true

[target.'cfg(windows)'.dependencies]
pageant.workspace = true

[dev-dependencies]
# Async & Runtime
tokio = { workspace = true, features = [
    "io-std",
    "io-util",
    "rt-multi-thread",
    "time",
    "net",
    "sync",
    "macros",
    "process",
] }
tokio-fd.workspace = true

# System & OS
shell-escape.workspace = true

# Logging & Error Handling
anyhow.workspace = true
env_logger.workspace = true

# CLI & TUI
clap.workspace = true
ratatui.workspace = true
termion.workspace = true

# Utilities
rand.workspace = true
tempfile.workspace = true
serial_test.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
russh-sftp.workspace = true
tokio.workspace = true
tokio-stream.workspace = true

[package.metadata.docs.rs]
all-features = true

[[bench]]
name = "ciphers"
harness = false
