[package]
authors = ["Pierre-Étienne Meunier <pe@pijul.org>"]
description = "Deal with SSH keys: load them, decrypt them, call an SSH agent."
documentation = "https://docs.rs/thrussh-keys"
edition = "2018"
homepage = "https://pijul.org/thrussh"
include = [
  "Cargo.toml",
  "src/lib.rs",
  "src/pem.rs",
  "src/agent/mod.rs",
  "src/agent/msg.rs",
  "src/agent/server.rs",
  "src/agent/client.rs",
  "src/bcrypt_pbkdf.rs",
  "src/blowfish.rs",
  "src/encoding.rs",
  "src/format/mod.rs",
  "src/format/openssh.rs",
  "src/format/pkcs5.rs",
  "src/format/pkcs8.rs",
  "src/key.rs",
  "src/signature.rs",
]
keywords = ["ssh"]
license = "Apache-2.0"
name = "thrussh-keys"
repository = "https://nest.pijul.com/pijul/thrussh"
version = "0.21.0"

[dependencies]
aes = {version = "0.7", features = ["ctr"]}
bcrypt-pbkdf = "0.6"
bit-vec = "0.6"
block-modes = "0.8"
byteorder = "1.4"
data-encoding = "2.3"
dirs = "3.0"
futures = "0.3"
hmac = "0.11"
log = "0.4"
md5 = "0.7"
num-bigint = "0.4"
num-integer = "0.1"
openssl = {version = "0.10", optional = true}
pbkdf2 = "0.8"
rand = "0.8"
russh-cryptovec = {version = "0.6.0", path = "../cryptovec"}
serde = "1.0"
serde_derive = "1.0"
sha2 = "0.9"
thiserror = "1.0"
thrussh-libsodium = {version = "0.2", path = "../thrussh-libsodium"}
tokio = {version = "1.17.0", features = ["io-util", "rt-multi-thread", "time", "net"]}
tokio-stream = {version = "0.1", features = ["net"]}
yasna = {version = "0.4.0", features = ["bit-vec", "num-bigint"]}

[dev-dependencies]
env_logger = "0.8"
tempdir = "0.3"
